<resources>
    <string name="app_name">Muslim Quotes</string>

    <!--Change ads id here-->
    <string name="app_id">ca-app-pub-3844487552229866~9779177398</string>
    <string name="banner_ads">ca-app-pub-3844487552229866/5352863136</string>
    <string name="interstitial_ads">ca-app-pub-3844487552229866/9587605708</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category Quotes</string>
    <string name="menu_favorite">Favorite Quotes</string>
    <string name="more_nfo">More Info</string>
    <string name="menu_share">Share</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_rate">Give Star</string>
    <string name="our_social">Our Social</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_instagram">Instagram</string>

    <!--Change about text here-->
    <string name="app_description">Aplikasi berbagi gambar dan kutipan islami, semoga bermanfaat jazakallah :)</string>
    <string name="menu_photo">Category Images</string>
</resources>
