<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
        android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo" />
    </group>

    <item android:title="@string/our_social">
        <menu>
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/ic_menu_instagram"
                android:title="@string/menu_instagram" />
        </menu>
    </item>

    <item android:title="@string/more_nfo">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
<!--            <item-->
<!--                android:id="@+id/nav_privacy"-->
<!--                android:icon="@drawable/ic_menu_flag"-->
<!--                android:title="@string/menu_policy" />-->
        </menu>
    </item>

</menu>
